# aethexai-mcp

./: .env.example  .gitignore  AETHEX.md  CHANGELOG.md  Dockerfile  README.md  gemini-extension.json  pyproject.toml  server.json
.github/workflows/: publish.yml  test.yml
aethexai_mcp/: __init__.py  __main__.py  client.py  config.py  model.py  server.py  utils.py
aethexai_mcp/tools/: __init__.py  agents.py  calls.py  conversations.py  knowledge.py  transcription.py  usage.py  voices.py
scripts/: build.sh  dev.sh  setup.sh  test.sh
tests/: conftest.py  test_utils.py
