[project]
name = "aethexai-mcp"
version = "0.1.0"
description = "Aethex MCP Server"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "aethex",
    "mcp",
    "voice",
    "text-to-speech",
    "speech-to-text",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "aethexai>=1.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.scripts]
aethexai-mcp = "aethexai_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "fastmcp",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=aethexai_mcp --cov-report=term-missing"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "fastmcp",
]
